--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,12 +1,9 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-// Variables
 @import 'variables';
-
-// Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
 //@import '~jquery-ui/themes/base/all.css';
+
+@import '~owl.carousel/dist/assets/owl.carousel.css';
+@import '~owl.carousel';
 
 @import 'mystyles';
